# zum_sent

./: NLP_praca_domowa.ipynb  README.md  cnn.py  datasets.py  glove.py  lstm.py  main.py  pyproject.toml
