[tool.poetry]
name = "zum-1"
version = "0.1.0"
description = ""
authors = ["ja"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
jupyter = "^1.0.0"
torch = "^2.0.1"
torchtext = "^0.15.2"
portalocker = "*"
seaborn = "*"
pandas= "*"
spacy = "^3.6.1"
wordcloud = "^1.9.2"
scikit-learn = "^1.3.1"
nltk = "^3.8.1"
keras = "^3.0.4"
transformers = "^4.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

